# mmk-python

./: LICENSE.txt  setup.cfg  test.py
mmk/: __init__.py  client.py  constants.py  exceptions.py  mmk.py
mmk/resources/: base_resource.py  country.py
