[metadata]
name = MMK Python
version = 1.0.0
description = MMK Python
author = milon mahato
author_email =
license = MIT
license_files = LICENSE
classifiers =
    Environment :: SDK
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Topic :: Internet
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules


[options]
include_package_data = true
install_requires =
    requests==2.32.3
    
packages = find:

[options.package_data]
* = *.txt, *.md, *.cfg, *.json
